# threatfaber

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: extract_release_notes.sh
src/: main.rs
src/extract/: mod.rs  pdf.rs  pdfium.rs
src/model/: extractor.rs  mod.rs  prompt.rs  types.rs
src/score/: cleaner.rs  images.rs  mod.rs  prompt.rs  scorer.rs  types.rs
src/threats/: generator.rs  mod.rs  prompt.rs
