[package]
name = "threatfaber"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
pdfium-render = "0.8.37"
rig-core = "0.33.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
unpdf = "0.2.4"
